--- a/modules/grid-helpers.less
+++ b/modules/grid-helpers.less
@@ -30,8 +30,9 @@
 /*
 * Funkar med känns inte helt rätt ändå
 */
-.showTypoGrid(@typoGridHeight: @magicNumber) {
-    @linecolor: #b3b3b3;
+.showTypoGrid(@linecolor, @typoGridHeight: @magicNumber) {
+    // @linecolor: #b3b3b3;
+    // @linecolor: white;
     background-size: 100% @typoGridHeight;
 
 
