--- a/modules/responsive-menu.less
+++ b/modules/responsive-menu.less
@@ -11,7 +11,7 @@
 
 // Menu item current/selected
 @navbarItemSelectedColor:       inherit;
-@navbarItemSelectedBgColor:     inherit; 
+@navbarItemSelectedBgColor:     inherit;
 //@navbarItemSelectedBorderColor: darken(lime, 10%);
 
 // Mobile button
@@ -139,8 +139,9 @@ a.rm-button {
 
         // Hover over a menu item
         &:hover {
-            //color: @navbarItemHoverColor;
-            //background-color: @navbarItemHoverBgColor;
+            color: @navbarItemHoverColor;
+            // background-color: @navbarItemHoverBgColor;
+            background-color: @submenuBgColor;
         }
 
         // Menu item for submenu
@@ -164,10 +165,10 @@ a.rm-button {
 
      // The base for the submenu
      ul {
-        position: absolute; 
+        position: absolute;
         z-index: @submenuZIndex;
-        left: -9999px; 
-        //padding-left: 8px; 
+        left: -9999px;
+        //padding-left: 8px;
 
         // Display the submenu, class to use from javascript
         &.rm-show-submenu {
@@ -180,7 +181,7 @@ a.rm-button {
 
          // Submenu
          ul {
-             left: -9999px; 
+             left: -9999px;
          }
      }
 }
@@ -193,7 +194,7 @@ a.rm-button {
 .rm-desktop {
 
     ul {
-        background-color: @submenuBgColor; 
+        background-color: @headerColor;
     }
 
     li {
@@ -204,8 +205,8 @@ a.rm-button {
         &.rm-selected,
         &.selected-parent, // for selected descendants
         &.selected {
-            //color: @navbarItemSelectedColor; 
-            //background-color: @navbarItemSelectedBgColor; 
+            //color: @navbarItemSelectedColor;
+            //background-color: @navbarItemSelectedBgColor;
         }
 
 
@@ -221,7 +222,7 @@ a.rm-button {
         // The link of the menu item
         a {
             color: @navbarItemColor;
-            background-color: @navbarItemBgColor;
+            background-color: @headerColor;
 
             &:hover {
                 color: @navbarItemHoverColor;
@@ -245,7 +246,7 @@ a.rm-button {
                 left: auto;
                 left: 30%;
             }
-        } 
+        }
 
 
         // Dropdown submenu, remove hide show button
@@ -307,7 +308,7 @@ a.rm-button {
         // Hover over a menu item
         &:hover {
             //border-color: @navbarMobileItemHoverBorderColor;
-        } 
+        }
     }
 }
 
