Last adjustments kmom03

--- a/modules/typography-defaults.less
+++ b/modules/typography-defaults.less
@@ -321,7 +321,7 @@
     .table1,
     .table2 {
         // margin-top:    @magicNumber;
-        margin-top:    -0.1em;
+        // margin-top:    -0.1em;
         margin-bottom: @magicNumber;
     }
 
