--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -3632,7 +3632,7 @@ hr:after {
   margin-top: 15px;
   display: inline;
   float: left;
-  width: 47.91666667%;
+  width: 56.25%;
   margin-left: 1.04166667%;
   margin-right: 1.04166667%;
 }
