--- a/modules/responsive-menu.less
+++ b/modules/responsive-menu.less
@@ -141,7 +141,8 @@ a.rm-button {
         &:hover {
             color: @navbarItemHoverColor;
             // background-color: @navbarItemHoverBgColor;
-            background-color: @submenuBgColor;
+            // background-color: @submenuBgColor;
+            // background-color: gray;
         }
 
         // Menu item for submenu
@@ -194,7 +195,7 @@ a.rm-button {
 .rm-desktop {
 
     ul {
-        background-color: @headerColor;
+        background-color: white; //@headerColor
     }
 
     li {
@@ -222,7 +223,7 @@ a.rm-button {
         // The link of the menu item
         a {
             color: @navbarItemColor;
-            background-color: @headerColor;
+            background-color: white; //@headerColor
 
             &:hover {
                 color: @navbarItemHoverColor;
