--- a/modules/typography-defaults.less
+++ b/modules/typography-defaults.less
@@ -93,7 +93,7 @@
 @bgColorTypographyMark:  #ffff99;
 
 // @colorBlockquoteBorder: #eee;
-@colorBlockquoteBorder: @bodyColor;
+@colorBlockquoteBorder: white; //@bodyColor
 @sizeBlockquoteBorder: 4px;
 
 .typographyTextElements() {
@@ -161,7 +161,7 @@
  */
 @borderColorCodeInline: #ccc;
 // @bgColorCodeInline:     #eee;
-@bgColorCodeInline:     @wrapAllColor;
+@bgColorCodeInline:     white; //@wrapAllColor
 @bgColorCodeBlock:      #eee;
 @colorCodeBlockBorder:  #ccc;
 @codeColor:             #d04747;
