--- a/modules/typography-defaults.less
+++ b/modules/typography-defaults.less
@@ -310,6 +310,7 @@
 @colorTableRowHover:        #000;
 @bgColorTableRowHover:      #f6f6f6;
 @colorTableRowBorderHover:  #666;
+@tablestripedHead: #000;
 
 .typographyTableElements() {
     table {
@@ -382,7 +383,7 @@
 
     .table2.striped {
         thead {
-            background-color: black;
+            background-color: @tablestripedHead;
             color: white;
         }
     }
