Fine tuning styles - kmom04

--- a/color.less
+++ b/color.less
@@ -75,13 +75,18 @@ html {
 * Sidhuvudet
 */
 .site-header {
-    height: 150px;
+    height: 100px;
     background-color: @headerColor;
     .boxsizing();
     width: 100%;
     margin-left: 0.1px;
 }
-// Next och previouslänkarna
+.rm-desktop {
+    li {
+        margin: 0.5em 0 0 0.3em;
+        border: 1px dotted @submenuBgColor;
+}
+}
 
 
 
