--- a/light.less
+++ b/light.less
@@ -6,6 +6,7 @@
 * Anax Flat theme.
 */
 @import url(modules.less);
+// @import url(common.less);
 @import url('https://fonts.googleapis.com/css?family=Raleway:200');
 @import url('https://fonts.googleapis.com/css?family=BioRhyme:300');
 @maxButtonFontSize: 1.2em;
