--- a/modules/layout.less
+++ b/modules/layout.less
@@ -97,6 +97,32 @@ html {
     display: none;
 }
 
+.table,
+.table2,
+.table2.stiped {
+    width: 90%;
+}
+
+div.code,
+pre code {
+    width: 90%;
+    margin-right: 20px;
+}
+
+h4,
+main p {
+    margin-right: 10%;
+    margin-left: 10px;
+}
+
+.table,
+.table2,
+.table2.stiped {
+    width: 90%;
+}
+.next {
+    margin-right: 10%;
+}
 /** --------------------------------------------------------------
  *  Responsive design
  */
