Starting to get finished with kmom04 part 2

--- a/common.less
+++ b/common.less
@@ -12,7 +12,22 @@
 .typographyListElements();
 .typographyOtherElements();
 
+main p {
+    margin-right: 10%;
+    margin-left: 10px;
+}
 
+.table,
+.table2,
+.table2.stiped {
+    width: 90%;
+}
+.table3 {
+    max-width: 960px;
+}
+.next {
+    margin-right: 10%;
+}
 /*Jag kommer åt li i navbaren här */
 .rm-desktop {
     li {
