--- a/dark.less
+++ b/dark.less
@@ -12,8 +12,15 @@
 @bodyColor: #000;
 @submenuBgColor: #717171;
 @linkhoverColor: lightgray;
+@bgColorCodeInline: #282626;
+@borderColorCodeInline: #222222;
 // @linkColor: white;
-
+// .typographyHeadings();
+// .typographyTextElements();
+// .typographyCodeElements();
+// .typographyTableElements();
+// .typographyListElements();
+// .typographyOtherElements();
 body {
     background: url("../img/black_background_pattern_light_texture_55291_1920x1080.jpg") no-repeat center center fixed;
 }
