--- a/default.less
+++ b/default.less
@@ -5,13 +5,13 @@
 /**
 * Anax Flat theme.
 */
-@import url(modules.less);
-.typographyHeadings();
-.typographyTextElements();
-.typographyCodeElements();
-.typographyTableElements();
-.typographyListElements();
-.typographyOtherElements();
+@import url(common.less);
+// .typographyHeadings();
+// .typographyTextElements();
+// .typographyCodeElements();
+// .typographyTableElements();
+// .typographyListElements();
+// .typographyOtherElements();
 
 @maxButtonFontSize: 1.8em;
 @navbarItemBgColor: #535b3f;
@@ -24,6 +24,9 @@
     background-color: @wrapAllColor;
     .shadowBox();
 }
+
+
+
 //
 // body.route-grid {
 //     .wrap-all {
