--- a/light.less
+++ b/light.less
@@ -16,7 +16,7 @@
 @headerColor: lightgray;
 @codeColor: #5e5e5e;
 @magicNumber: 32px;
-
+//
 .typographyHeadings();
 .typographyTextElements();
 .typographyCodeElements();
