--- a/modules/layout.less
+++ b/modules/layout.less
@@ -97,11 +97,11 @@ html {
     display: none;
 }
 
-.table,
-.table2,
-.table2.stiped {
-    width: 90%;
-}
+// .table,
+// .table2,
+// .table2.stiped {
+//     width: 90%;
+// }
 
 div.code,
 pre code {
@@ -109,20 +109,20 @@ pre code {
     margin-right: 20px;
 }
 
-h4,
-main p {
-    margin-right: 10%;
-    margin-left: 10px;
-}
-
-.table,
-.table2,
-.table2.stiped {
-    width: 90%;
-}
-.next {
-    margin-right: 10%;
-}
+// h4,
+// main p {
+//     margin-right: 10%;
+//     margin-left: 10px;
+// }
+//
+// .table,
+// .table2,
+// .table2.stiped {
+//     width: 90%;
+// }
+// .next {
+//     margin-right: 10%;
+// }
 /** --------------------------------------------------------------
  *  Responsive design
  */
