--- a/light.less
+++ b/light.less
@@ -23,7 +23,10 @@
 .typographyTableElements();
 .typographyListElements();
 .typographyOtherElements();
-
+// .navbar2{
+//     .column(10);
+//     float: right;
+// }
 .footer{
     background-color: @footerColor;
     color: gray;
@@ -33,7 +36,7 @@
 
 .rm-desktop {
     li {
-        margin: 1em 0 0.3 0.3em;
+        margin: 1em 0 0 0.3em;
         border: 1px dotted @submenuBgColor;
         // Hover over a menu item
         &:hover {
