--- a/dark.less
+++ b/dark.less
@@ -24,7 +24,11 @@
 body {
     background: url("../img/black_background_pattern_light_texture_55291_1920x1080.jpg") no-repeat center center fixed;
 }
-
+.rm-desktop {
+    li {
+        margin: 1em 0 0 0.3em;
+    }
+}
 .wrap-all {
     background-color: @wrapAllColor;
     color: white;
