--- a/default.less
+++ b/default.less
@@ -73,11 +73,14 @@ body {
 h1 {
     border-bottom: 1px solid gray;
 }
+.block.site-footer{
+    padding: 0;
+}
 .footer{
     background-color: @footerColor;
     color: white;
     margin: 1em 0 2em 0;
-    height: 250px;
+    min-height: 300px;
 }
 // byline
 .after-main .content p{
