--- a/light.less
+++ b/light.less
@@ -31,7 +31,15 @@
     background-color: @footerColor;
     color: gray;
     margin: 1em 0 2em 0;
-    height: 250px;
+    min-height: 300px;
+}
+
+.block.site-footer{
+    float: left;
+    padding: 0;
+    background-color: @footerColor;
+    width: 100%;
+    margin: 0;
 }
 
 .rm-desktop {
