Building my images.md

--- a/default.less
+++ b/default.less
@@ -57,7 +57,7 @@ body {
 .rm-desktop {
     li {
         margin: 1em 0 0 1em;
-        border: 2px solid @footerColor;
+        border: 1px dotted @footerColor;
         // Hover over a menu item
         &:hover {
             color: white;
