--- a/modules.less
+++ b/modules.less
@@ -26,3 +26,4 @@
 // @import url(typography-layout.less);
 @import url(grid-helpers.less);
 // @import url(grid-flex.less);
+@import url(figure.less);
