--- a/modules/layout.less
+++ b/modules/layout.less
@@ -23,6 +23,12 @@ html {
   	.container();
     max-width: @gridSystemWidth;
 }
+.side-name{
+    max-width: 180px;
+}
+// td {
+//     min-height: 50px;
+// }
 .footer{
     min-height: 300px;
 }
@@ -51,6 +57,12 @@ hr {
 }
 .article{
     // clear: both;
+    float: right;
+    .column(10);
+    padding-left: 20px;
+    .boxsizing();
+}
+.blog-list{
     float: right;
     .column(10);
     padding-left: 20px;
@@ -144,7 +156,7 @@ main.has-sidebar-left .article{
     width: 0;
 }
 .navbar2{
-    .column(10);
+    .column(12);
     float: right;
 }
 .rm-max.rm-navbar {
