Adding figure.less and the blogg

--- a/modules/layout.less
+++ b/modules/layout.less
@@ -50,6 +50,11 @@ html {
   .column(4);
 }
 
+// Detta är lite av ett test för att få till bloggsidan.
+.blog-list-item{
+    clear: both;
+}
+
 hr {
     border: 0;
     height: 1px;
