--- a/common.less
+++ b/common.less
@@ -31,7 +31,7 @@
 /*Jag kommer åt li i navbaren här */
 .rm-desktop {
     li {
-        margin: 4.5em 0 0 0.8em;
+        // margin: 4.5em 0 0 0.8em;
         border: 1px dotted @submenuBgColor;
         // Hover over a menu item
         &:hover {
