--- a/default.less
+++ b/default.less
@@ -79,7 +79,7 @@ h1 {
 .footer{
     background-color: @footerColor;
     color: white;
-    margin: 1em 0 2em 0;
+    // margin: 1em 0 2em 0;
     min-height: 300px;
 }
 // byline
