--- a/modules/layout.less
+++ b/modules/layout.less
@@ -19,6 +19,12 @@ body.route-typography {
 html {
     overflow-y: scroll;
 }
+
+.navbar2{
+    max-width: 960px;
+    max-height: 100px;
+}
+
 .wrap-all {
   	.container();
     // .column(12);
@@ -182,6 +188,10 @@ main.has-sidebar-left .article{
 .navbar2{
     .column(12);
     float: right;
+}
+.rm-desktop li{
+    max-width: 70px;
+    font-size: 0.8em;
 }
 .rm-max.rm-navbar {
     display: none;
