Kmom06: finishing assignment 3

--- a/default.less
+++ b/default.less
@@ -20,6 +20,10 @@
 @headerColor: #737e57;
 @footerColor: #4c4d4b;
 
+.watercolor{
+    display: none;
+}
+
 .wrap-all {
     background-color: @wrapAllColor;
     .shadowBox(63px);
@@ -81,6 +85,9 @@ h1 {
     color: white;
     // margin: 1em 0 2em 0;
     min-height: 300px;
+    a{
+        color: #9c9c9c;
+    }
 }
 // byline
 .after-main .content p{
