--- a/light.less
+++ b/light.less
@@ -33,7 +33,9 @@
     margin: 1em 0 2em 0;
     min-height: 300px;
 }
-
+.watercolor{
+    display: none;
+}
 .block.site-footer{
     float: left;
     padding: 0;
