--- a/modules/layout.less
+++ b/modules/layout.less
@@ -7,6 +7,13 @@ body.route-grid {
         .showGrid();
     }
 }
+.sidebar-left-image{
+    display: none;
+}
+.elementimage{
+    display: none;
+}
+
 
 body.route-typography {
     .wrap-all {
