--- a/unity.less
+++ b/unity.less
@@ -22,6 +22,9 @@
     -moz-box-shadow: none;
     box-shadow: none;
 }
+.watercolor{
+    display: none;
+}
 .sidebar{
     border-top: @unityborderthickhess solid @unitycolor;
     .borderradius(@radius);
