--- a/dark.less
+++ b/dark.less
@@ -25,6 +25,10 @@
 body {
     background: url("../img/black_background_pattern_light_texture_55291_1920x1080.jpg") no-repeat center center fixed;
 }
+.watercolor{
+    display: none;
+}
+
 .rm-desktop {
     li {
         margin: 1em 0 0 0.3em;
